# Custom-Fastapi-Docs

./: README.md  pyproject.toml
app/: main.py  tailwind.config.js
app/static/css/: main.css
app/templates/: index.html
